# oh_my_loam

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  ggg.txt  main.cc  package.xml
common/: CMakeLists.txt  color.h  common.h  config.h  filter.h  log.cc  log.h  macros.h  micros.h  pose.cc  pose.h  tic_toc.h  types.h  utils.cc  utils.h
common/color/: color.h
common/config/: yaml_config.cc  yaml_config.h
common/geometry/: pose.cc  pose.h  pose3d.h  trajectory.h
common/log/: log.cc  log.h
common/macro/: macros.h
common/math/: fitting.h  math_utils.cc  math_utils.h
common/pcl/: pcl_types.h  pcl_utils.h
common/registerer/: registerer.h
common/time/: timer.cc  timer.h
common/visualizer/: lidar_visualizer.h  lidar_visualizer_utils.cc  lidar_visualizer_utils.h
config/: config.yaml
configs/: config.yaml  config_nsh_indoor_outdoor.yaml
examples/: CMakeLists.txt  main_noros.cc  main_rosbag.cc  package.xml
oh_my_loam/: CMakeLists.txt  oh_my_loam.cc  oh_my_loam.h
oh_my_loam/base/: CMakeLists.txt  feature.h  helper.cc  helper.h  types.h  utils.cc  utils.h
oh_my_loam/configs/: config.yaml
oh_my_loam/extractor/: CMakeLists.txt  extractor.cc  extractor.h  extractor_VLP16.cc  extractor_VLP16.h
oh_my_loam/mapper/: CMakeLists.txt  map.cc  map.h  mapper.cc  mapper.h
oh_my_loam/odometer/: CMakeLists.txt  odometer.cc  odometer.h
oh_my_loam/solver/: CMakeLists.txt  cost_function.h  solver.cc  solver.h
oh_my_loam/visualizer/: extractor_visualizer.cc  extractor_visualizer.h  mapper_visualizer.cc  mapper_visualizer.h  odometer_visualizer.cc  odometer_visualizer.h  ohmyloam_visualizer.cc  ohmyloam_visualizer.h
src/: CMakeLists.txt  base_feature_extractor.cc  base_feature_extractor.h  feature_extractor_VLP16.h  feature_extractor_base.cc  feature_extractor_base.h  oh_my_loam.cc  oh_my_loam.h  visualizer_base.h  visualizer_feature_points.h
src/extractor/: CMakeLists.txt  base_extractor.cc  base_extractor.h  extractor_VLP16.cc  extractor_VLP16.h  feature_points.h
src/feature_points_extractor/: CMakeLists.txt  base_feature_points_extractor.cc  base_feature_points_extractor.h  feature_points.h  feature_points_extractor_VLP16.cc  feature_points_extractor_VLP16.h
src/helper/: CMakeLists.txt  helper.cc  helper.h
src/mapper/: mapper.cc  mapper.h
src/odometry/: CMakeLists.txt  odometry.cc  odometry.h
src/solver/: cost_function.h  solver.cc  solver.h
src/visualizer/: CMakeLists.txt  base_visualizer.h  extractor_visualizer.cc  extractor_visualizer.h  feature_points_visualizer.cc  feature_points_visualizer.h  odometry_visualizer.cc  odometry_visualizer.h  utils.h
